aligned items, and changed localhost to localhost:80 for ngrok fix

--- a/dice_website/src/styles/index.css
+++ b/dice_website/src/styles/index.css
@@ -1,17 +1,33 @@
-.logo{
-    height: 50px;
-    width: 50px;
+/**
+css for id
+ */
+#chart{
+    position: relative;
+    margin: auto;
+    width: 40vw;
+}
+#container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 #card-img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
 }
 #latestRollContainer{
-    padding-top: 5%;
-    padding-bottom: 5%;
+  
 }
+/**
+css for classes
+ */
 .card-title{
     text-align: center;
+}
+.logo{
+    height: 50px;
+    width: 50px;
 }
